--- a/IndianNameSuggester/res/layout/item_list_name.xml
+++ b/IndianNameSuggester/res/layout/item_list_name.xml
@@ -3,40 +3,65 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:paddingBottom="@dimen/list_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/list_vertical_margin" >
-
-    <TextView
-        android:id="@+id/c1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:text="ABC"
-        android:textSize="@dimen/text_size_default" />
-
-    <TextView
-        android:id="@+id/c2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:text="ABC" />
+    android:paddingBottom="@dimen/def_margin_vertical"
+    android:paddingLeft="@dimen/def_margin_vertical"
+    android:paddingRight="@dimen/def_margin_vertical"
+    android:paddingTop="@dimen/def_margin_vertical" >
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="25dp"
-        android:gravity="right"
         android:orientation="horizontal"
-        android:text="ABC" >
+        android:weightSum="3" >
+
+        <TextView
+            android:id="@+id/c1"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_weight="1.2"
+            android:text="ABC"
+            android:textSize="@dimen/ts_large" />
+
+        <TextView
+            android:id="@+id/c2"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_weight="1.2"
+            android:text="ABC"
+            android:textSize="@dimen/ts_large" />
 
         <TextView
             android:id="@+id/c3"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_weight="0.6"
             android:text="ABC"
             android:textSize="16sp" />
+        
+         <ImageView
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_gravity="center_vertical"
+                android:src="@drawable/smile3" />
     </LinearLayout>
+
+    <!-- <LinearLayout -->
+    <!-- android:layout_width="match_parent" -->
+    <!-- android:layout_height="wrap_content" -->
+    <!-- android:layout_marginLeft="25dp" -->
+    <!-- android:gravity="right" -->
+    <!-- android:orientation="horizontal" -->
+    <!-- android:text="ABC" > -->
+
+
+    <!-- <TextView -->
+    <!-- android:id="@+id/c3" -->
+    <!-- android:layout_width="wrap_content" -->
+    <!-- android:layout_height="wrap_content" -->
+    <!-- android:text="ABC" -->
+    <!-- android:textSize="16sp" /> -->
+    <!-- </LinearLayout> -->
 
 </LinearLayout>
