--- a/IndianNameSuggester/res/layout/item_list_name.xml
+++ b/IndianNameSuggester/res/layout/item_list_name.xml
@@ -41,6 +41,7 @@
             android:textSize="16sp" />
 
         <ImageView
+            android:id="@+id/ivSmily"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_gravity="center_vertical"
