--- a/IndianNameSuggester/res/menu/main.xml
+++ b/IndianNameSuggester/res/menu/main.xml
@@ -12,5 +12,11 @@
         android:orderInCategory="100"
         android:showAsAction="never"
         android:title="@string/about"/>
+    
+     <item
+        android:id="@+id/action_database_copy"
+        android:orderInCategory="100"
+        android:showAsAction="never"
+        android:title="@string/copy_database"/>
 
 </menu>
