--- a/IndianNameSuggester/res/layout/item_list_name.xml
+++ b/IndianNameSuggester/res/layout/item_list_name.xml
@@ -61,18 +61,16 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Name" />
+            android:text="Ma" />
 
         <RadioButton
-            android:visibility="gone"
             android:id="@+id/rbFeMale"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Female" />
+            android:text="Fe" />
 
         <RadioButton
-             android:visibility="gone"
             android:id="@+id/rbBoth"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -80,19 +78,18 @@
             android:text="Trans" />
 
         <RadioButton
-             android:visibility="gone"
             android:id="@+id/rbCast"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Sirname" />
+            android:text="Sir" />
         
         <RadioButton
             android:id="@+id/rbDelete"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Delete" />
+            android:text="Del" />
     </RadioGroup>
     <!-- <LinearLayout -->
     <!-- android:layout_width="match_parent" -->
