--- a/IndianNameSuggester/res/layout/activity_main.xml
+++ b/IndianNameSuggester/res/layout/activity_main.xml
@@ -8,7 +8,8 @@
         android:id="@+id/gv_alphabet"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:numColumns="auto_fit" >
+        android:verticalSpacing="10dp"
+        android:numColumns="3" >
     </GridView>
 
 </LinearLayout>
