--- a/IndianNameSuggester/res/layout/item_alphabet.xml
+++ b/IndianNameSuggester/res/layout/item_alphabet.xml
@@ -1,37 +1,81 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/AliceBlue"
     android:paddingLeft="@dimen/def_padding"
     android:paddingRight="@dimen/def_padding" >
 
-    <ImageView
-        android:id="@+id/iv_product_cover"
+    <FrameLayout
+        android:id="@+id/fl_main"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:contentDescription="@string/about"
-        android:scaleType="matrix"
-        android:src="@drawable/ic_blank_img" />
+        android:layout_centerInParent="true" >
 
-    <ImageView
-        android:id="@+id/iv_product"
+        <ImageView
+            android:id="@+id/iv_product_cover"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:contentDescription="@string/about"
+            android:scaleType="matrix"
+            android:src="@drawable/ic_blank_img" />
+
+        <ImageView
+            android:id="@+id/iv_product"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:contentDescription="@string/about"
+            android:scaleType="matrix"
+            android:src="@drawable/ic_blank_img" />
+
+        <TextView
+            android:id="@+id/tv_alphabet"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:text="ABC"
+            android:textSize="60sp" >
+        </TextView>
+    </FrameLayout>
+
+    <FrameLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:contentDescription="@string/about"
-        android:scaleType="matrix"
-        android:src="@drawable/ic_blank_img" />
+        android:layout_toRightOf="@+id/fl_main"
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="-40dp"
+        android:layout_marginStart="-40dp"
+        android:layout_toEndOf="@+id/fl_main" >
 
-    <TextView
-        android:id="@+id/tv_alphabet"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:gravity="center"
-        android:text="ABC"
-        android:textSize="60sp" >
-    </TextView>
+        <ImageView
+            android:id="@+id/iv_count_cover"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:contentDescription="@string/about"
+            android:scaleType="matrix"
+            android:src="@drawable/ic_blank_img" />
 
-</FrameLayout>
+        <ImageView
+            android:id="@+id/iv_count"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:contentDescription="@string/about"
+            android:scaleType="matrix"
+            android:src="@drawable/ic_blank_img" />
+
+        <TextView
+            android:id="@+id/tv_count"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:textSize="12sp" >
+        </TextView>
+    </FrameLayout>
+
+</RelativeLayout>
