--- a/IndianNameSuggester/res/layout/item_alphabet.xml
+++ b/IndianNameSuggester/res/layout/item_alphabet.xml
@@ -37,36 +37,7 @@
             android:layout_gravity="center"
             android:gravity="center"
             android:text="ABC"
-            android:textSize="60sp" >
-        </TextView>
-    </FrameLayout>
-
-    <FrameLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_toRightOf="@+id/fl_main"
-        android:layout_marginTop="20dp"
-        android:layout_marginLeft="-40dp"
-        android:layout_marginStart="-40dp"
-        android:layout_toEndOf="@+id/fl_main" >
-
-        <ImageView
-            android:id="@+id/iv_count_cover"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:contentDescription="@string/about"
-            android:scaleType="matrix"
-            android:src="@drawable/ic_blank_img" />
-
-        <ImageView
-            android:id="@+id/iv_count"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:contentDescription="@string/about"
-            android:scaleType="matrix"
-            android:src="@drawable/ic_blank_img" />
+            android:textSize="60sp" />
 
         <TextView
             android:id="@+id/tv_count"
@@ -74,8 +45,48 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:gravity="center"
-            android:textSize="12sp" >
-        </TextView>
+            android:text="ABC"
+            android:textSize="12sp" />
     </FrameLayout>
+
+    <!-- <FrameLayout -->
+    <!-- android:layout_width="wrap_content" -->
+    <!-- android:layout_height="wrap_content" -->
+    <!-- android:layout_toRightOf="@+id/fl_main" -->
+    <!-- android:layout_marginTop="20dp" -->
+    <!-- android:layout_marginLeft="-40dp" -->
+    <!-- android:layout_marginStart="-40dp" -->
+    <!-- android:layout_toEndOf="@+id/fl_main" > -->
+
+
+    <!-- <ImageView -->
+    <!-- android:id="@+id/iv_count_cover" -->
+    <!-- android:layout_width="wrap_content" -->
+    <!-- android:layout_height="wrap_content" -->
+    <!-- android:layout_gravity="center" -->
+    <!-- android:contentDescription="@string/about" -->
+    <!-- android:scaleType="matrix" -->
+    <!-- android:src="@drawable/ic_blank_img" /> -->
+
+
+    <!-- <ImageView -->
+    <!-- android:id="@+id/iv_count" -->
+    <!-- android:layout_width="wrap_content" -->
+    <!-- android:layout_height="wrap_content" -->
+    <!-- android:layout_gravity="center" -->
+    <!-- android:contentDescription="@string/about" -->
+    <!-- android:scaleType="matrix" -->
+    <!-- android:src="@drawable/ic_blank_img" /> -->
+
+
+    <!-- <TextView -->
+    <!-- android:id="@+id/tv_count" -->
+    <!-- android:layout_width="wrap_content" -->
+    <!-- android:layout_height="wrap_content" -->
+    <!-- android:layout_gravity="center" -->
+    <!-- android:gravity="center" -->
+    <!-- android:textSize="12sp" > -->
+    <!-- </TextView> -->
+    <!-- </FrameLayout> -->
 
 </RelativeLayout>
