--- a/IndianNameSuggester/res/layout/activity_about.xml
+++ b/IndianNameSuggester/res/layout/activity_about.xml
@@ -3,10 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:paddingBottom="@dimen/activity_horizontal_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_horizontal_margin" >
+    android:padding="@dimen/activity_margin_horizontal" >
 
     <TextView
         android:id="@+id/tv_about"
