--- a/IndianNameSuggester/res/layout/activity_main.xml
+++ b/IndianNameSuggester/res/layout/activity_main.xml
@@ -1,15 +1,24 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/container"
+    android:id="@+id/dl_drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
-    <GridView
-        android:id="@+id/gv_alphabet"
+    <FrameLayout
+        android:id="@+id/fl_container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:verticalSpacing="10dp"
-        android:numColumns="3" >
-    </GridView>
+        android:layout_height="match_parent" >
+    </FrameLayout>
 
-</LinearLayout>
+    <ListView
+        android:id="@+id/lv_left_drawer"
+        android:layout_width="240dp"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:background="@color/Orange"
+        android:choiceMode="singleChoice"
+        android:listSelector="@drawable/list_selector"
+        android:divider="@android:color/transparent" >
+    </ListView>
+
+</android.support.v4.widget.DrawerLayout>
